# lifeops

./: .gitignore  Cargo.toml  README.md  categories.yaml  implementation.md
crates/lifeops-core/src/: error.rs  lib.rs
crates/lifeops-core/src/entity/: mod.rs  recurrence.rs  search.rs  store.rs  validate.rs
crates/lifeops-core/src/schema/: categories.rs  mod.rs  raw.rs  resolve.rs  write.rs
crates/lifeops-core/src/view/: mod.rs  model.rs  page.rs  query.rs
crates/lifeops-core/tests/: integration.rs
crates/lifeops-server/: Cargo.toml
crates/lifeops-server/src/: app.rs  backup.rs  config.rs  error.rs  lib.rs  main.rs  state.rs  static_files.rs
crates/lifeops-server/src/mcp/: auth.rs  convert.rs  logic.rs  mod.rs  params.rs  prompt.rs  tools.rs
crates/lifeops-server/src/routes/: entities.rs  misc.rs  mod.rs  pages.rs  schemas.rs  search.rs  system.rs
crates/lifeops-tauri/: Cargo.toml
crates/lifeops-tauri/src/: lib.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte  App.test.ts  app.css  main.ts
frontend/src/lib/: BlockEditor.svelte  BlockEditor.test.ts  ChartBlockFields.svelte  ChartBlockFields.test.ts  DetailView.svelte  DetailView.test.ts  EntityTable.svelte  EntityTable.test.ts  PageRenderer.svelte  PageRenderer.test.ts  ProfileSectionsEditor.svelte  ProfileSectionsEditor.test.ts  SchemaForm.svelte  SchemaForm.test.ts  SearchPalette.svelte  SearchPalette.test.ts  Sidebar.svelte  Sidebar.test.ts  ValueCell.svelte  ValueCell.test.ts  api.test.ts  api.ts  format.ts  kind.ts  reflabel.ts  router.svelte.ts  router.test.ts  tauri.test.ts  tauri.ts  types.ts  viewseed.svelte.ts  viewseed.test.ts
frontend/src/lib/pages/: Browse.svelte  Browse.test.ts  Home.svelte  Home.test.ts  PageEditor.svelte  PageEditor.test.ts  PageView.svelte  Settings.svelte  Settings.test.ts
frontend/src/lib/widgets/: Chart.svelte  Chart.test.ts  ChecklistWidget.svelte  ChecklistWidget.test.ts  ListWidget.svelte  MoneyWidget.svelte  NoteEditor.svelte  ProfileView.svelte  ProfileView.test.ts  QuickRecordWidget.svelte  QuickRecordWidget.test.ts  RefPicker.svelte  RefPicker.test.ts  Widget.svelte  Widget.test.ts
schemas/: 거래.yaml  계좌.yaml  공간.yaml  구독.yaml  노트.yaml  물건.yaml  소모품.yaml  시계.yaml  측정.yaml  프로필.yaml  할일.yaml  활동.yaml
views/: 건강.yaml  프로필.yaml  홈.yaml
