[package]
name = "lifeops-server"
version = "0.1.0"
edition = "2021"

[dependencies]
lifeops-core = { path = "../lifeops-core" }
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "fs"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
