[package]
name = "lifeops-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "lifeops_server"
path = "src/lib.rs"

[[bin]]
name = "lifeops-server"
path = "src/main.rs"

[dependencies]
lifeops-core = { path = "../lifeops-core" }
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
directories = "5"
indexmap = { version = "2", features = ["serde"] }
local-ip-address = "0.6"
mime_guess = "2"
rust-embed = "8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "fs", "sync"] }
tower-http = { version = "0.6", features = ["fs", "trace", "limit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tracing = "0.1"
tracing-subscriber = "0.3"
zip = "2"
rmcp = { version = "2.2.0", features = ["server", "macros", "transport-streamable-http-server", "transport-streamable-http-server-session"] }
schemars = "1.2.1"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[features]
embed-spa = []
