[package]
name = "lifeops-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "lifeops_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
lifeops-core = { path = "../lifeops-core" }
lifeops-server = { path = "../lifeops-server", features = ["embed-spa"] }
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
rustix = { version = "1", features = ["fs"] }
tauri = { version = "2", features = ["tray-icon"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"

[dev-dependencies]
tempfile = "3"
